autodep8 (0.4) UNRELEASED; urgency=medium

  * Standards-Version is 3.9.8 (no changes needed).
  * Changed Vcs-* URLs to https schema.
  * Fixed list in package description.

 -- Ondřej Nový <novy@ondrej.org>  Sat, 23 Apr 2016 21:17:37 +0200

autodep8 (0.3) unstable; urgency=medium

  * split tests by language
  * Ruby: remove commented lines from Build-Depends fields
  * NodeJS:
    - also detect NodeJS packages by binary packages
    - add support for reading upstream name from package.json (Closes: #803176)
      - added dependency and build dependency on python3 (autopkgtest itself
        already depends on python3 anyway)
    - add support for reading upstream name from binary package
  * debian/tests/control: added DEP-8 tests to fix a huge incoherence, which
    is autodep8 not being tested itself on CI.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 26 Nov 2015 17:30:16 -0200

autodep8 (0.2) unstable; urgency=medium

  [ Antonio Terceiro ]
  * debian/control: add Vcs-* fields
  * support/ruby: pass --check-dependencies to gem2deb-test-runner

  [ Martin Pitt ]
  * Switch maintainer to Autopkgtest team, and add myself as uploader, with
    Antonio's consent.
  * Bump Standards-Version to 3.9.6 (no changes necessary).

  [ Jean-Baptiste Lallement ]
  * support/dkms: Add support for dkms packages (Closes: #766668) This needs a
    corresponding "dkms-autopkgtest" script in DKMS itself, see #769095.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 09:30:40 -0300

autodep8 (0.1) unstable; urgency=medium

  * Initial release.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 20 Sep 2014 10:45:21 -0300