@@ -1,0 +1,4 @@
+#!/bin/sh
+
+grep-dctrl --quiet -F Source -r '^python3\?-.*$' debian/control || \
+  grep-dctrl --quiet -F Package -r '^python3\?-.*$' debian/control
