@@ -3,6 +3,7 @@ autodep8 (0.4) UNRELEASED; urgency=medium
   * Standards-Version is 3.9.8 (no changes needed).
   * Changed Vcs-* URLs to https schema.
   * Fixed list in package description.
+  * Added Python support.
 
  -- Ondřej Nový <novy@ondrej.org>  Sat, 23 Apr 2016 21:17:37 +0200
 
